Update Home link to include directory path

--- a/lab2-about.html
+++ b/lab2-about.html
@@ -13,7 +13,7 @@
                 <th colspan="2">Navigation</th>
             </tr>
             <tr>
-                <td><a href="lab2-home.html">Home</a></td>
+                <td><a href="WebProgramming/lab2-home.html">Home</a></td>
                 <td><a href="mailto:s01293350@tri-c.edu">Email</a></td>
             </tr>
         </table>
