--- a/lab2-home.html
+++ b/lab2-home.html
@@ -16,7 +16,7 @@
             <th>Link to Tri-C IT Page</th>
         </tr>
         <tr>
-            <td>Link to<a href=WebProgramming/"lab2-about.html">About</a></td>
+            <td>Link to<a href="WebProgramming/lab2-about.html">About</a></td>
             <td>Link to<a href="https://www.tri-c.edu/learning-commons/library/index.html">Library Webpage</a></td>
             <td>Link to<a href="https://www.tri-c.edu/">Tri-C Homepage</a></td>
             <td>Link to<a href="https://www.tri-c.edu/IT">Tri-C IT Page</a></td>
